#
# Change log of IntaRNA available at 
#
# https://github.com/BackofenLab/IntaRNA
#
################################################################################

################################################################################
# changes in development version since last release 
################################################################################


################################################################################  
################################################################################


################################################################################
### version 3.3.1
################################################################################  

# IntaRNA
- BUGFIX: empty lines with white spaces within FASTA input were causing parsing
  errors

################################################################################  
################################################################################

220328 Martin Raden
 * bin/CommandLineParsing :
   * parseSequencesFasta() :
     * BUGFIX: missing handling of empty lines with white spaces only within 
       FASTA input (were causing parsing errors) 

################################################################################
### version 3.3.0
################################################################################  

# IntaRNA
- `--outPairwise` enables pairwise sequence processing instead of all-vs-all
- input range for `--q|tIdxPos0` is now +-2,000,000,000 (was +-9,999,999) to
  enable genomic position settings

################################################################################  
################################################################################

220215 Martin Raden
 * bin/CommandLineParsing :
   + outPairwise : switch to trigger pairwise vs. all-vs-all sequence processing
   + getQueryNumberForTarget() : target-specific query sequence number